--- a/src/static_src/css/bornhack.css
+++ b/src/static_src/css/bornhack.css
@@ -111,6 +111,7 @@ footer {
     bottom: 0px;
     left: 50%;
     transform: translate(-50%);
+    z-index: 9999;
 }
 
 .breadcrumb > li.no-before::before {
